# opengl-heart

./: CMakeLists.txt  README.md
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderClass.cpp
src/Headers/: EBO.h  VAO.h  VBO.h  glad.h  shaderClass.h
src/Shaders/: default.vert
